front end begining

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -18,15 +18,16 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="/css/responsive.css" rel="stylesheet" />
+  <link rel="icon" type="image/ico" href="/images/favicon.ico">
 </head>
 
 <body class="sub_page">
@@ -78,16 +79,16 @@
       <div class="row">
         <div class="col-md-7 px-0">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="/images/about-img.png" alt="">
           </div>
         </div>
         <div class="col-md-4 col-lg-3">
           <div class="detail-box">
             <h2>
-              About Our Cars
+              About Our Love for Traveling
             </h2>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem
+              Welcome to our carpool service site. Find the best travel for you and dont forget to leave a feedback for the driver!
             </p>
             <a href="">
               Read More
@@ -103,17 +104,16 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+      Copyright &copy; 2024 All Rights Reserved. Design by Aleks, Drago and Lyuci
     </p>
   </footer>
   <!-- footer section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="/js/jquery-3.4.1.min.js"></script>
+  <script src="/js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
-  <script src="js/custom.js"></script>
+  <script src="/js/custom.js"></script>
 
 </body>
 
