--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -27,6 +27,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="icon" type="image/ico" href="/images/favicon.ico">
 </head>
 
 <body class="sub_page">
@@ -77,7 +78,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Request A call back
+          Request to the admins
         </h2>
       </div>
       <div class="row">
@@ -114,8 +115,7 @@
             <img src="images/location.png" alt="">
           </div>
           <h6>
-            Loram Ipusum ari
-            lo elisant na
+            We will be happy to receive your request through our email for contacts
           </h6>
         </a>
         <a href="">
@@ -123,7 +123,7 @@
             <img src="images/call.png" alt="">
           </div>
           <h6>
-            (+12 1234456789)
+            (+359 891 222 444)
           </h6>
         </a>
         <a href="">
@@ -131,7 +131,7 @@
             <img src="images/mail.png" alt="">
           </div>
           <h6>
-            demo@gmail.com
+            carpooljust4you@gmail.com
           </h6>
         </a>
 
@@ -168,8 +168,7 @@
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2020 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+      Copyright &copy; 2024 All Rights Reserved. Design by Aleks, Drago and Lyuci
     </p>
   </footer>
   <!-- footer section -->
