--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,21 +12,22 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Rent4u</title>
+    <title>Carpool just 4 You</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
     <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
 
     <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="/css/responsive.css" rel="stylesheet" />
+    <link rel="icon" type="image/ico" href="/images/favicon.ico">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
             <nav class="navbar navbar-expand-lg custom_nav-container">
                 <a class="navbar-brand" href="index.html">
             <span>
-              Rent4u
+              Carpool just 4 You
             </span>
                 </a>
 
@@ -57,8 +58,9 @@
                     <div id="myNav" class="overlay">
                         <div class="overlay-content">
                             <a href="index.html">Home</a>
-                            <a href="about.html">About</a>
+                            <a th:href="@{/home/about}">About</a>
                             <a href="car.html">Cars</a>
+                            <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
                             <a href="blog.html">Blog</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="#">Login</a>
@@ -73,7 +75,7 @@
     <section class=" slider_section position-relative">
         <div class="slider_container">
             <div class="img-box">
-                <img src="images/hero-img.jpg" alt="">
+                <img src="/images/hero-img.jpg" alt="">
             </div>
             <div class="detail_container">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -167,7 +169,7 @@
         </form>
     </div>
     <div class="img-box">
-        <img src="images/book-car.png" alt="">
+        <img src="/images/book-car.png" alt="">
     </div>
 </section>
 
@@ -179,16 +181,16 @@
     <div class="container">
         <div class="heading_container">
             <h2>
-                Better Way For Find Your Favourite Cars
+                Better Way To Find Cheaper and Safe Travel for Your Destination
             </h2>
             <p>
-                It is a long established fact that a reader will be distracted by the readable
+                Thank you for using Carpool Just 4 You
             </p>
         </div>
         <div class="car_container">
             <div class="box">
                 <div class="img-box">
-                    <img src="images/c-1.png" alt="">
+                    <img src="/images/c-1.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -204,7 +206,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/c-2.png" alt="">
+                    <img src="/images/c-2.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -220,7 +222,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/c-3.png" alt="">
+                    <img src="/images/c-3.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -247,7 +249,7 @@
         <div class="row">
             <div class="col-md-7 px-0">
                 <div class="img-box">
-                    <img src="images/about-img.png" alt="">
+                    <img src="/images/about-img.png" alt="">
                 </div>
             </div>
             <div class="col-md-4 col-lg-3">
@@ -301,7 +303,7 @@
         <div class="rent_container">
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-1.png" alt="">
+                    <img src="/images/r-1.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -311,7 +313,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-2.png" alt="">
+                    <img src="/images/r-2.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -321,7 +323,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-3.png" alt="">
+                    <img src="/images/r-3.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -331,7 +333,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-4.png" alt="">
+                    <img src="/images/r-4.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -341,7 +343,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-5.png" alt="">
+                    <img src="/images/r-5.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -351,7 +353,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/r-6.png" alt="">
+                    <img src="/images/r-6.png" alt="">
                 </div>
                 <div class="price">
                     <a href="">
@@ -396,7 +398,7 @@
                                 </h6>
                             </div>
                             <div class="img-box">
-                                <img src="images/b-1.jpg" alt="">
+                                <img src="/images/b-1.jpg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -415,7 +417,7 @@
                                 </h6>
                             </div>
                             <div class="img-box">
-                                <img src="images/b-2.jpg" alt="">
+                                <img src="/images/b-2.jpg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -434,7 +436,7 @@
                                 </h6>
                             </div>
                             <div class="img-box">
-                                <img src="images/b-3.jpg" alt="">
+                                <img src="/images/b-3.jpg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -453,7 +455,7 @@
                                 </h6>
                             </div>
                             <div class="img-box">
-                                <img src="images/b-2.jpg" alt="">
+                                <img src="/images/b-2.jpg" alt="">
                             </div>
                             <div class="detail-box">
                                 <h5>
@@ -489,7 +491,7 @@
         <div class="content_box">
             <div class="box">
                 <div class="img-box">
-                    <img src="images/u-1.png" alt="">
+                    <img src="/images/u-1.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -499,7 +501,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/u-2.png" alt="">
+                    <img src="/images/u-2.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -509,7 +511,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/u-3.png" alt="">
+                    <img src="/images/u-3.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -519,7 +521,7 @@
             </div>
             <div class="box">
                 <div class="img-box">
-                    <img src="images/u-4.png" alt="">
+                    <img src="/images/u-4.png" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -562,8 +564,8 @@
                             </div>
                             <div class="client_id">
                                 <div class="img-box">
-                                    <img src="images/client-1.png" alt="" class="img-1">
-                                    <img src="images/client-1-white.png" alt="" class="img-2">
+                                    <img src="/images/client-1.png" alt="" class="img-1">
+                                    <img src="/images/client-1-white.png" alt="" class="img-2">
                                 </div>
                                 <div class="name">
                                     <h6>
@@ -585,8 +587,8 @@
                             </div>
                             <div class="client_id">
                                 <div class="img-box">
-                                    <img src="images/client-2.png" alt="" class="img-1">
-                                    <img src="images/client-2-white.png" alt="" class="img-2">
+                                    <img src="/images/client-2.png" alt="" class="img-1">
+                                    <img src="/images/client-2-white.png" alt="" class="img-2">
                                 </div>
                                 <div class="name">
                                     <h6>
@@ -608,8 +610,8 @@
                             </div>
                             <div class="client_id">
                                 <div class="img-box">
-                                    <img src="images/client-1.png" alt="" class="img-1">
-                                    <img src="images/client-1-white.png" alt="" class="img-2">
+                                    <img src="/images/client-1.png" alt="" class="img-1">
+                                    <img src="/images/client-1-white.png" alt="" class="img-2">
                                 </div>
                                 <div class="name">
                                     <h6>
@@ -631,8 +633,8 @@
                             </div>
                             <div class="client_id">
                                 <div class="img-box">
-                                    <img src="images/client-1.png" alt="" class="img-1">
-                                    <img src="images/client-1-white.png" alt="" class="img-2">
+                                    <img src="/images/client-1.png" alt="" class="img-1">
+                                    <img src="/images/client-1-white.png" alt="" class="img-2">
                                 </div>
                                 <div class="name">
                                     <h6>
@@ -694,7 +696,7 @@
 
             <a href="">
                 <div class="img-box">
-                    <img src="images/location.png" alt="">
+                    <img src="/images/location.png" alt="">
                 </div>
                 <h6>
                     Loram Ipusum ari
@@ -703,7 +705,7 @@
             </a>
             <a href="">
                 <div class="img-box">
-                    <img src="images/call.png" alt="">
+                    <img src="/images/call.png" alt="">
                 </div>
                 <h6>
                     (+12 1234456789)
@@ -711,7 +713,7 @@
             </a>
             <a href="">
                 <div class="img-box">
-                    <img src="images/mail.png" alt="">
+                    <img src="/images/mail.png" alt="">
                 </div>
                 <h6>
                     demo@gmail.com
@@ -723,22 +725,22 @@
             <div class="social-box">
                 <div>
                     <a href="">
-                        <img src="images/fb.png" alt="">
+                        <img src="/images/fb.png" alt="">
                     </a>
                 </div>
                 <div>
                     <a href="">
-                        <img src="images/twitter.png" alt="">
+                        <img src="/images/twitter.png" alt="">
                     </a>
                 </div>
                 <div>
                     <a href="">
-                        <img src="images/linkedin.png" alt="">
+                        <img src="/images/linkedin.png" alt="">
                     </a>
                 </div>
                 <div>
                     <a href="">
-                        <img src="images/insta.png" alt="">
+                        <img src="/images/insta.png" alt="">
                     </a>
                 </div>
             </div>
@@ -766,17 +768,16 @@
 <!-- footer section -->
 <footer class="container-fluid footer_section">
     <p>
-        Copyright &copy; 2020 All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Copyright &copy; 2024 All Rights Reserved. Design by Aleks, Drago and Lyuci
     </p>
 </footer>
 <!-- footer section -->
 
-<script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<script src="/js/jquery-3.4.1.min.js"></script>
+<script src="/js/bootstrap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
 </script>
-<script src="js/custom.js"></script>
+<script src="/js/custom.js"></script>
 
 
 </body>
