images uploading implementation

--- a/src/main/resources/templates/feedbackView.html
+++ b/src/main/resources/templates/feedbackView.html
@@ -60,10 +60,9 @@
                     <div id="myNav" class="overlay">
                         <div class="overlay-content">
                             <a href="index.html">Home</a>
-                            <a href="about.html">About</a>
+                            <a th:href="@{/home/about}">About</a>
                             <a href="car.html">Cars</a>
-                            <a href="createFeedbackView.html">Feedback for Users</a>
-                            <a href="feedbackView.html">See what passengers say about drivers</a>
+                            <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
                             <a href="blog.html">Blog</a>
                             <a href="contact.html">Contact Us</a>
                             <a href="#">Login</a>
