--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -1023,6 +1023,17 @@ a:focus {
 
 /* footer section*/
 
+.copyright {
+  border-top: 1px solid rgba(255, 255, 255, 0.08);
+  background: var(--bs-dark) !important;
+  position:fixed;
+  margin: auto;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  width:100%;
+}
+
 .footer_section {
   background-color: $primary1;
   padding: 20px;
