--- a/src/main/resources/templates/userPageView.html
+++ b/src/main/resources/templates/userPageView.html
@@ -81,8 +81,8 @@
                             <a href="index.html">Home</a>
                             <a th:href="@{/home/about}">About</a>
                             <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
-                            <a href="contact.html">Contact Us</a>
-                            <a href="#">Logout</a>
+                            <a th:href="@{/user/update}">Update</a>
+                            <a th:href="@{/auth/logout}">Logout</a>
                         </div>
                     </div>
                 </div>
