Update admin page

--- a/src/main/resources/templates/adminPageView.html
+++ b/src/main/resources/templates/adminPageView.html
@@ -55,6 +55,7 @@
                         <a th:href="@{/home/about}">About</a>
                         <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
                         <a th:href="@{/user/update}">Update</a>
+                        <a th:href="@{/user}">All users</a>
                         <a th:href="@{/auth/logout}">Logout</a>
                     </div>
                 </div>
