--- a/src/main/resources/templates/userPageView.html
+++ b/src/main/resources/templates/userPageView.html
@@ -37,8 +37,8 @@
                         <!-- Dropdown menu -->
                         <select onchange="redirectToPage(this)">
                             <option value="FeedBack">FeedBack</option>
-                            <option value="banana">Create Travel</option>
-                            <option value="orange">All Travels</option>
+                            <option value="/feedback/create">Create Feedback</option>
+                            <option value="/feedback/update">Update Feedback</option>
                         </select>
                     </div>
                 </div>
